--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
       height:100%;
       display:block;
       cursor:grab;
+      touch-action: none; /* ← これでホイール/タッチが奪われにくい */
     }
     .hud{
       position:absolute;
@@ -254,8 +255,9 @@
       </div>
 
       <div class="tiny">
-        ※CDNがブロックされても動くようにフォールバック読み込みを入れています。<br/>
-        ※太さを確実に効かせるなら Tube 化が必要（次段階で対応可）。
+        ・操作：左ドラッグ=回転 / 右ドラッグ=パン / ホイール=ズーム<br/>
+        ・CDNがブロックされても動くようにフォールバック読み込みを入れています。<br/>
+        ・太さを確実に効かせるなら Tube 化が必要（次段階で対応可）。
       </div>
     </div>
 
@@ -269,11 +271,6 @@
 </div>
 
 <script>
-/**
- * CDNフォールバックローダー
- * - 指定したURL群を順に試して、読み込めたらresolve
- * - 失敗したら次のURLへ
- */
 function loadScriptWithFallback(urls){
   return new Promise((resolve, reject) => {
     let i = 0;
@@ -294,7 +291,6 @@ function loadScriptWithFallback(urls){
 window.addEventListener("load", async () => {
   const hud = document.getElementById("hud");
   try {
-    // three.min.js
     hud.textContent = "Three.js を読み込み中…";
     const threeUrl = await loadScriptWithFallback([
       "https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.min.js",
@@ -302,7 +298,6 @@ window.addEventListener("load", async () => {
       "https://cdnjs.cloudflare.com/ajax/libs/three.js/0.160.0/three.min.js"
     ]);
 
-    // OrbitControls（失敗しても“描画”は続行したいので、ここはtry/catchで弱く扱う）
     hud.textContent = "OrbitControls を読み込み中…";
     let controlsOk = true;
     try {
@@ -393,7 +388,7 @@ function startApp({ controlsOk, threeUrl }){
   const inBotR = document.getElementById("inBotR");
   const colLine = document.getElementById("colLine");
   const colPin = document.getElementById("colPin");
-  const inLineW = document.getElementById("inLineW"); // NOTE: Lineは太さが効かない環境あり
+  const inLineW = document.getElementById("inLineW"); // NOTE: Line太さは環境依存
   const inAnimT = document.getElementById("inAnimT");
   const rngCyl = document.getElementById("rngCyl");
   const selTheme = document.getElementById("selTheme");
@@ -416,14 +411,39 @@ function startApp({ controlsOk, threeUrl }){
 
   const scene = new THREE.Scene();
 
-  const camera = new THREE.PerspectiveCamera(55, 1, 0.01, 200);
-  camera.position.set(7, 6, 9);
+  const camera = new THREE.PerspectiveCamera(55, 1, 0.01, 500);
 
   let controls = null;
   if (controlsOk && THREE.OrbitControls){
     controls = new THREE.OrbitControls(camera, renderer.domElement);
+
+    // ★パン＆ズームを確実に
+    controls.enablePan = true;
+    controls.enableZoom = true;
+    controls.enableRotate = true;
+
+    // ★操作割当：左=回転、右=パン、中央=ズーム
+    controls.mouseButtons = {
+      LEFT: THREE.MOUSE.ROTATE,
+      MIDDLE: THREE.MOUSE.DOLLY,
+      RIGHT: THREE.MOUSE.PAN
+    };
+
+    // ★タッチ
+    controls.touches = {
+      ONE: THREE.TOUCH.ROTATE,
+      TWO: THREE.TOUCH.DOLLY_PAN
+    };
+
     controls.enableDamping = true;
     controls.dampingFactor = 0.08;
+    controls.zoomSpeed = 1.0;
+    controls.panSpeed = 1.0;
+    controls.rotateSpeed = 0.8;
+
+    // 見る中心を原点へ
+    controls.target.set(0,0,0);
+    controls.update();
   }
 
   scene.add(new THREE.AmbientLight(0xffffff, 0.55));
@@ -473,6 +493,35 @@ function startApp({ controlsOk, threeUrl }){
       document.documentElement.style.setProperty("--inputBg", "rgba(0,0,0,.25)");
       hud.classList.remove("light");
       scene.background = new THREE.Color("#0b0f17");
+    }
+  }
+
+  // -----------------------------
+  // Camera fit (★中央に来る＆全体が入る)
+  // -----------------------------
+  function resetCameraToFit(R, H){
+    const target = new THREE.Vector3(0, 0, 0);
+
+    // 円柱を包む概算半径
+    const bound = Math.sqrt(R*R + (H*0.5)*(H*0.5));
+    const margin = 1.35;
+
+    // fovから距離逆算
+    const fov = THREE.MathUtils.degToRad(camera.fov);
+    const dist = (bound * margin) / Math.sin(fov / 2);
+
+    // 見栄えの良い斜め上
+    camera.position.set(dist*0.75, dist*0.55, dist*0.85);
+
+    camera.near = Math.max(0.01, dist / 200);
+    camera.far  = dist * 10;
+    camera.updateProjectionMatrix();
+
+    camera.lookAt(target);
+
+    if (controls){
+      controls.target.copy(target);
+      controls.update();
     }
   }
 
@@ -563,7 +612,6 @@ function startApp({ controlsOk, threeUrl }){
     const positions = [];
     let count = 0;
 
-    // includes は O(N) だけど最小構成としてOK（後で Set 化で高速化可能）
     for (let i=0;i<N;i++){
       if (!topAllowed.includes(i)) continue;
 
@@ -611,11 +659,11 @@ function startApp({ controlsOk, threeUrl }){
       <div><b>gcd(N,step)</b>=${d} / <b>L</b>=${L}</div>
       <div>上面許可: <b>${topCount}</b> / 底面許可: <b>${botCount}</b></div>
       <div>糸（線分）: <b>${segCount}</b></div>
-      <div style="margin-top:6px; opacity:.85;">THREE: ${threeUrl} / OrbitControls: ${controlsOk ? "OK" : "NG（回転操作なし）"}</div>
+      <div style="margin-top:6px; opacity:.85;">THREE: ${threeUrl} / OrbitControls: ${controlsOk ? "OK" : "NG（回転/パン/ズームなし）"}</div>
     `;
   }
 
-  function rebuild(){
+  function rebuild({ doCameraFit = true } = {}){
     const N = clampInt(inN.value, 3, 2000);
     const M = clampInt(inM.value, 0, 2000000);
     const R = clampNum(inR.value, 0.1, 50);
@@ -663,6 +711,9 @@ function startApp({ controlsOk, threeUrl }){
     isPlaying = false;
     btnAnim.textContent = "▶ アニメ再生";
     setLineProgress(1.0);
+
+    // ★ここで中心＆全体フィット
+    if (doCameraFit) resetCameraToFit(R, H);
   }
 
   // -----------------------------
@@ -707,7 +758,7 @@ function startApp({ controlsOk, threeUrl }){
   // -----------------------------
   // Events
   // -----------------------------
-  btnApply.addEventListener("click", rebuild);
+  btnApply.addEventListener("click", () => rebuild({ doCameraFit: true }));
 
   btnAnim.addEventListener("click", ()=>{
     if (!lines) return;
@@ -733,15 +784,15 @@ function startApp({ controlsOk, threeUrl }){
     inAnimT.value="7.0";
     rngCyl.value="0.18";
     selTheme.value="dark";
+
     if (controls) controls.reset();
-    camera.position.set(7,6,9);
-    rebuild();
+    rebuild({ doCameraFit: true });
   });
 
   btnShot.addEventListener("click", savePNG);
 
-  selTheme.addEventListener("change", rebuild);
-  rngCyl.addEventListener("input", rebuild);
+  selTheme.addEventListener("change", () => rebuild({ doCameraFit: true }));
+  rngCyl.addEventListener("input", () => rebuild({ doCameraFit: false })); // 透明度は視点そのまま
 
   window.addEventListener("resize", ()=>{ resize(); });
 
@@ -750,12 +801,11 @@ function startApp({ controlsOk, threeUrl }){
   // -----------------------------
   applyTheme(selTheme.value);
   resize();
-  rebuild();
+  rebuild({ doCameraFit: true });
   requestAnimationFrame(loop);
 
-  // Controlsが無い場合はHUDで通知
   if (!controlsOk){
-    hud.textContent += "（※回転操作は無効：OrbitControlsが読み込めませんでした）";
+    hud.textContent += "（※OrbitControlsが読めず、回転/パン/ズームなし）";
   }
 }
 </script>
